MapLib/Parser/MapParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.9.2
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from /home/michael/Repos/UrtLib/MapLib/Parser/Map.g4 by ANTLR 4.9.2

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419


	#pragma warning disable 3021
    using System.Globalization;
    using MapLib;
    using MapLib.Elements;
    using MapLib.Geometry;

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.9.2")]
[System.CLSCompliant(false)]
public partial class MapParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		PATCHDEF2=1, QUOTE=2, LROUNDBRACKET=3, RROUNDBRACKET=4, LCURLYBRACKET=5, 
		RCURLYBRACKET=6, KEYVALUE=7, PATH=8, EXP=9, DECIMAL=10, INT=11, WS=12, 
		NL=13, WORD=14, COMMENT=15;
	public const int
		RULE_map = 0, RULE_entity = 1, RULE_entityKey = 2, RULE_entityElement = 3, 
		RULE_brushElement = 4, RULE_brushFace = 5, RULE_patchElement = 6, RULE_patchVertex = 7, 
		RULE_keyValueParam = 8, RULE_pathParam = 9, RULE_intParam = 10, RULE_numberParam = 11;
	public static readonly string[] ruleNames = {
		"map", "entity", "entityKey", "entityElement", "brushElement", "brushFace", 
		"patchElement", "patchVertex", "keyValueParam", "pathParam", "intParam", 
		"numberParam"
	};

	private static readonly string[] _LiteralNames = {
		null, "'patchDef2'", "'\"'", "'('", "')'", "'{'", "'}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, "PATCHDEF2", "QUOTE", "LROUNDBRACKET", "RROUNDBRACKET", "LCURLYBRACKET", 
		"RCURLYBRACKET", "KEYVALUE", "PATH", "EXP", "DECIMAL", "INT", "WS", "NL", 
		"WORD", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "Map.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MapParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MapParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MapParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class MapContext : ParserRuleContext {
		public Map value;
		public EntityContext a;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(MapParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(MapParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntityContext[] entity() {
			return GetRuleContexts<EntityContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntityContext entity(int i) {
			return GetRuleContext<EntityContext>(i);
		}
		public MapContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_map; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.EnterMap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.ExitMap(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapVisitor<TResult> typedVisitor = visitor as IMapVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitMap(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public MapContext map() {
		MapContext _localctx = new MapContext(Context, State);
		EnterRule(_localctx, 0, RULE_map);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			 _localctx.value =  new Map(); 
			State = 37;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LCURLYBRACKET || _la==NL) {
				{
				{
				State = 28;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while (_la==NL) {
					{
					{
					State = 25;
					Match(NL);
					}
					}
					State = 30;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 31;
				_localctx.a = entity();
				State = 32;
				Match(NL);
				 _localctx.value.Entities.Add(_localctx.a.value); 
				}
				}
				State = 39;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityContext : ParserRuleContext {
		public Entity value;
		public EntityKeyContext a;
		public EntityElementContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLYBRACKET() { return GetToken(MapParser.LCURLYBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(MapParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(MapParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLYBRACKET() { return GetToken(MapParser.RCURLYBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public EntityKeyContext[] entityKey() {
			return GetRuleContexts<EntityKeyContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntityKeyContext entityKey(int i) {
			return GetRuleContext<EntityKeyContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntityElementContext[] entityElement() {
			return GetRuleContexts<EntityElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public EntityElementContext entityElement(int i) {
			return GetRuleContext<EntityElementContext>(i);
		}
		public EntityContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entity; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.EnterEntity(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.ExitEntity(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapVisitor<TResult> typedVisitor = visitor as IMapVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntity(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityContext entity() {
		EntityContext _localctx = new EntityContext(Context, State);
		EnterRule(_localctx, 2, RULE_entity);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			_localctx.value =  new Entity() { Keys = new List<EntityKey>(), Elements = new List<EntityElement>()};
			State = 41;
			Match(LCURLYBRACKET);
			State = 42;
			Match(NL);
			State = 49;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 43;
					_localctx.a = entityKey();
					State = 44;
					Match(NL);
					 _localctx.value.Keys.Add(_localctx.a.value); 
					}
					} 
				}
				State = 51;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,2,Context);
			}
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==LCURLYBRACKET || _la==WS) {
				{
				{
				State = 52;
				_localctx.b = entityElement();
				State = 53;
				Match(NL);
				 _localctx.value.Elements.Add(_localctx.b.value); 
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 61;
			Match(RCURLYBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityKeyContext : ParserRuleContext {
		public EntityKey value;
		public KeyValueParamContext a1;
		public KeyValueParamContext a2;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WS() { return GetTokens(MapParser.WS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WS(int i) {
			return GetToken(MapParser.WS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public KeyValueParamContext[] keyValueParam() {
			return GetRuleContexts<KeyValueParamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public KeyValueParamContext keyValueParam(int i) {
			return GetRuleContext<KeyValueParamContext>(i);
		}
		public EntityKeyContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entityKey; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.EnterEntityKey(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.ExitEntityKey(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapVisitor<TResult> typedVisitor = visitor as IMapVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntityKey(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityKeyContext entityKey() {
		EntityKeyContext _localctx = new EntityKeyContext(Context, State);
		EnterRule(_localctx, 4, RULE_entityKey);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 66;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==WS) {
				{
				{
				State = 63;
				Match(WS);
				}
				}
				State = 68;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 69;
			_localctx.a1 = keyValueParam();
			State = 70;
			Match(WS);
			State = 71;
			_localctx.a2 = keyValueParam();
			 _localctx.value =  new EntityKey() { Name=_localctx.a1.value.Replace("\"", string.Empty), Value=_localctx.a2.value.Replace("\"", string.Empty) }; 
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class EntityElementContext : ParserRuleContext {
		public EntityElement value;
		public BrushElementContext a1;
		public PatchElementContext a2;
		[System.Diagnostics.DebuggerNonUserCode] public BrushElementContext brushElement() {
			return GetRuleContext<BrushElementContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PatchElementContext patchElement() {
			return GetRuleContext<PatchElementContext>(0);
		}
		public EntityElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_entityElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.EnterEntityElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.ExitEntityElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapVisitor<TResult> typedVisitor = visitor as IMapVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitEntityElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public EntityElementContext entityElement() {
		EntityElementContext _localctx = new EntityElementContext(Context, State);
		EnterRule(_localctx, 6, RULE_entityElement);
		try {
			State = 80;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 74;
				_localctx.a1 = brushElement();
				_localctx.value =  _localctx.a1.value;
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 77;
				_localctx.a2 = patchElement();
				_localctx.value =  _localctx.a2.value;
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BrushElementContext : ParserRuleContext {
		public Brush value;
		public BrushFaceContext b;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LCURLYBRACKET() { return GetToken(MapParser.LCURLYBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] NL() { return GetTokens(MapParser.NL); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode NL(int i) {
			return GetToken(MapParser.NL, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RCURLYBRACKET() { return GetToken(MapParser.RCURLYBRACKET, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WS() { return GetTokens(MapParser.WS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WS(int i) {
			return GetToken(MapParser.WS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public BrushFaceContext[] brushFace() {
			return GetRuleContexts<BrushFaceContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public BrushFaceContext brushFace(int i) {
			return GetRuleContext<BrushFaceContext>(i);
		}
		public BrushElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_brushElement; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.EnterBrushElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.ExitBrushElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapVisitor<TResult> typedVisitor = visitor as IMapVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBrushElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BrushElementContext brushElement() {
		BrushElementContext _localctx = new BrushElementContext(Context, State);
		EnterRule(_localctx, 8, RULE_brushElement);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			_localctx.value =  new Brush() { Faces = new List<Face>()};
			State = 86;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==WS) {
				{
				{
				State = 83;
				Match(WS);
				}
				}
				State = 88;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 89;
			Match(LCURLYBRACKET);
			State = 90;
			Match(NL);
			State = 103;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 94;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					while (_la==WS) {
						{
						{
						State = 91;
						Match(WS);
						}
						}
						State = 96;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
					}
					State = 97;
					_localctx.b = brushFace();
					State = 98;
					Match(NL);
					 _localctx.value.Faces.Add(_localctx.b.value); 
					}
					} 
				}
				State = 105;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,8,Context);
			}
			State = 109;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==WS) {
				{
				{
				State = 106;
				Match(WS);
				}
				}
				State = 111;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			State = 112;
			Match(RCURLYBRACKET);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BrushFaceContext : ParserRuleContext {
		public Face value;
		public NumberParamContext a1;
		public NumberParamContext a2;
		public NumberParamContext a3;
		public NumberParamContext b1;
		public NumberParamContext b2;
		public NumberParamContext b3;
		public NumberParamContext c1;
		public NumberParamContext c2;
		public NumberParamContext c3;
		public PathParamContext d;
		public NumberParamContext e1;
		public NumberParamContext e2;
		public NumberParamContext e3;
		public NumberParamContext e4;
		public NumberParamContext e5;
		public IntParamContext e6;
		public IntParamContext e7;
		public NumberParamContext e8;
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LROUNDBRACKET() { return GetTokens(MapParser.LROUNDBRACKET); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LROUNDBRACKET(int i) {
			return GetToken(MapParser.LROUNDBRACKET, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] WS() { return GetTokens(MapParser.WS); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode WS(int i) {
			return GetToken(MapParser.WS, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RROUNDBRACKET() { return GetTokens(MapParser.RROUNDBRACKET); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RROUNDBRACKET(int i) {
			return GetToken(MapParser.RROUNDBRACKET, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberParamContext[] numberParam() {
			return GetRuleContexts<NumberParamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public NumberParamContext numberParam(int i) {
			return GetRuleContext<NumberParamContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PathParamContext pathParam() {
			return GetRuleContext<PathParamContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public IntParamContext[] intParam() {
			return GetRuleContexts<IntParamContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public IntParamContext intParam(int i) {
			return GetRuleContext<IntParamContext>(i);
		}
		public BrushFaceContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_brushFace; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.EnterBrushFace(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IMapListener typedListener = listener as IMapListener;
			if (typedListener != null) typedListener.ExitBrushFace(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMapVisitor<TResult> typedVisitor = visitor as IMapVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBrushFace(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BrushFaceContext brushFace() {
		BrushFaceContext _localctx = new BrushFaceContext(Context, State);
		EnterRule(_localctx, 10, RULE_brushFace);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 114;
			Match(LROUNDBRACKET);
			State = 115;
			Match(WS);
			State = 116;
			_localctx.a1 = numberParam();
			State = 117;
			Match(WS);
			State = 118;
			_localctx.a2 = numberParam();
			State = 119;
			Match(WS);
			State = 120;
			_localctx.a3 = numberParam();
			State = 121;
			Match(WS);
			State = 122;
			Match(RROUNDBRACKET);
			State = 123;
			Match(WS);
			State = 124;
			Match(LROUNDBRACKET);
			State = 125;
			Match(WS);
			State = 126;
			_localctx.b1 = numberParam();
			State = 127;
			Match(WS);
			State = 128;
			_localctx.b2 = numberParam();
			State = 129;
			Match(WS);
			State = 130;
			_localctx.b3 = numberParam();
			State = 131;
			Match(WS);
			State = 132;
			Match(RROUNDBRACKET);
			State = 133;
			Match(WS);
			State = 134;
			Match(LROUNDBRACKET);
			State = 135;
			Match(WS);
			State = 136;
			_localctx.c1 = numberParam();
			State = 137;
			Match(WS);
			State = 138;
			_localctx.c2 = numberParam();
			State = 139;
			Match(WS);
			State = 140;
			_localctx.c3 = numberParam();
			State = 141;
			Match(WS);
			State = 142;
			Match(RROUNDBRACKET);
			State = 143;
			Match(WS);
			State = 144;
			_localctx.d = pathParam();
			State = 145;
			Match(WS);
			State = 146;
			_localctx.e1 = numberParam();
			State = 147;
			Match(WS);
			State = 148;
			_localctx.e2 = numberParam();
			State = 149;
			Match(WS);
			State = 150;
			_localctx.e3 = numberParam();
			State = 151;
			Match(WS);
			State = 152;
			_localctx.e4 = numberParam();
			State = 153;
			Match(WS);
			State = 154;
			_localctx.e5 = numberParam();
			State = 155;
			Match(WS);
			State = 156;
			_localctx.e6 = intParam();
			State = 157;
			Match(WS);
			State = 158;
			_localctx.e7 = intParam();
			State = 159;
			Match(WS);
			State = 160;
			_localctx.e8 = numberParam();
			 
						_localctx.value =  new Face(new Point3D(_localctx.a1.value, _localctx.a2.value, _localctx.a3.value), new Point3D(_localctx.b1.value, _localctx.b2.value, _localctx.b3.value), new Point3D(_localctx.c1.value, _localctx.c2.value, _localctx.c3.value));

						_localctx.value.Texture = _localctx.d.value;
						_localctx.value.XOffset = _localctx.e1.value;
						_localctx.value.YOffset = _localctx.e2.value;
						_localctx.value.Rotation = _localctx.e3.value;
						_localctx.value.XScale = _localctx.e4.value;
						_localctx.value.YScale = _localctx.e5.value;
						_localctx.value.ContentFlags = _localctx.e6.value;
						_localctx.value.SurfaceFlags = _localctx.e7.value;
						_localctx.value.Unknown = _localctx.e8.value;
					
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
